--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v2
 
+      - name: Set version # Get the version from the release tag and update in [config].json
+        uses: maks11060/deno-publish-version@v2
+
+      - name: Publish to JSR
+        run: deno publish --allow-dirty
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
