--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build NPM package (On Release)
+name: Build Release (NPM & JSR) (On Release)
 
 on:
   release:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    name: Build NPM package (On Release)
+    name: Build Release (NPM & JSR) (On Release)
     runs-on: ubuntu-latest
     permissions:
       id-token: write # This is required for requesting the JWT
